--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import 'jekyll-theme-cayman';
 
 body {
-  background-color: #00ffff;
+  background-color: #ffffff;
   font-family: Arial, Verdana, Helvetica, sans-serif;
 }
 
